--- a/app/assets/stylesheets/georesolution/_details.less
+++ b/app/assets/stylesheets/georesolution/_details.less
@@ -1,322 +1,227 @@
-@import "../categorytag.less";
-
-/* Details popup */
-.popup-header {
-
-  .details-skip-prev, .details-skip-next {
-    margin-right:3px;
-    cursor:hand; 
- }
- 
-}
-
-.details-header-source a {
-  text-shadow:none;
-  font-family:"FontAwesome";
-  color:#fff;
-  text-decoration:none;
-  font-style:normal;
-  font-size:15px;
-  text-shadow:none;
-}
-
-#details-content-topsection {
-  height:346px;
-  position:relative;
-  width:100%;
-    
-  #clear-results {
-    position:absolute;
-    top:10px;
-    right:10px;
-    z-index:100;
-    background-color:#fff;
-   .box-shadow (0, 0, 4px, 1px, rgba(0,0,0,0.4));
-   .rounded-corners(3px);
-   padding:3px 4px;
-   color:#333;
-  }
-    
-  #details-map {
-    position:absolute;
-    width:630px;
-    height:300px;
-    border:1px dotted #bbb;
-    top:0;
-    left:0;
-    
-    .gazetteer-id {
-      display:inline-block;
-      margin:3px 0 1px 0;
-      font-size:11px;
-      text-shadow:1px 1px rgba(0, 0, 0, 0.4);
-      padding:5px 4px 5px 2px;
-      letter-spacing:0.5px;
-      .rounded-corners(3);
-      color:#fff;
-      line-height:90%;
-      text-decoration:none;
-      background-color:#999;
-      box-shadow:inset 1px 1px 0 rgba(255, 255, 255, 0.2), inset -1px -1px 0 rgba(0, 0, 0, 0.2);
-    }
-    
-    .gazetteer-id:hover {
-      background-color:#009900;
-      box-shadow:inset 1px 1px 0 rgba(255, 255, 255, 0.2), inset -1px -1px 0 rgba(0, 0, 0, 0.2);
-    }
-  }
-  
-  
-  #details-content-search {
-    position:absolute;
-    bottom:0;
-    left:0;
-    width:632px;
-    background-color:#d7d7d7;
-    box-sizing:border-box;
-    padding:0;
-    height:34px;
-    color:#555;
-  
-    #details-content-search-suggestions {
-      display:inline-block;
-      padding:7px 20px;
-      cursor:pointer;
-      height:34px;
-      box-sizing:border-box;
-      border-right:1px solid #eee;
-      float:left;
-    }
-    
-    #details-content-search-suggestions:hover {
-      background-color:#dfdfdf;
-    }
-  
-    #details-content-search-textsearch {
-      text-align:right;
-      display:inline-block;
-      padding-left:10px;
-      
-      input {
-        border:1px solid #ccc;
-        background-color:#fff;
-        width:350px;
-        height:24px;
-        margin:5px 0;
-        padding:2px 3px;
-        outline:none;
-      }
-      
-    } /* #details-content-search textsearch */
-  
-  } /* #details-content-search */
-
-  #details-content-placeinfo {
-    position:absolute;
-    box-sizing:border-box;
-    width:500px;
-    top:0px;
-    right:10px;
-    font-size:13px;
-  
-    #details-content-automatch, #details-content-correction {
-      background-color:#dfdfdf;
-      padding:10px 15px 10px 50px;
-      margin-top:0px;
-      margin-bottom:0px;
-      border-style:dotted;
-      border-color:#bbb;
-      border-width:1px 1px 0px 1px;
-      position:relative;
-    }
-
-    #details-content-automatch:after {
-      content:'\f085';
-      font-family:"FontAwesome";
-      font-size:20px;
-      color:#777;
-      position:absolute;
-      top:14px;
-      left:14px;
-    }
-
-    #details-content-correction {
-      border-bottom-width:1px;
-    }
-
-    #details-content-correction:after {
-      content:'\f007';
-      font-family:"FontAwesome";
-      font-size:20px;
-      color:#777;
-      position:absolute;
-      top:10px;
-      left:14px;  
-    }  
-    
-    #details-content-status {   
-      box-sizing:border-box;
-      width:100%;
-      padding-top:10px;
-
-      .status-button {
-        position:relative;
-        display:inline-block;
-        text-align:center;
-        background-color:#d7d7d7;
-        cursor:pointer;
-        color:#efefef;
-        width:34px;
-        height:34px;
-        box-sizing:border-box;
-        font-size:16px;
-        margin-right:10px;
-        padding:8px 4px 0 0;
-      } /* .status-button */
-  
-      /* Compound icons */
-      .status-button-no-suitable-match,
-      .status-button-ambiguous,
-      .status-button-multiple {
-        padding:5px 6px 4px 0;
-        bottom:3px;
-    
-        .icon:after {
-          position:absolute;
-          font-size:68%;
-          bottom:0px;
-          right:8px;
-        }
-      }
-  
-      .status-button-no-suitable-match .icon:after {
-        content:'\f05e';
-      }
-      
-      .status-button-ambiguous .icon:after {
-        content:'\f059';
-      }  
-  
-      .status-button-multiple .icon:after {
-        content:'2+';
-        font-weight:bold;
-        font-size:60%;
-        bottom:0px;
-        right:5px;
-      }
-  
-      .status-button-verified.active,
-      .status-button-verified:hover { background-color:#009900; }
-  
-      .status-button-not-verified.active,
-      .status-button-not-verified:hover { background-color:#555; }
-  
-      .status-button-false-detection.active,
-      .status-button-false-detection:hover { background-color:#bb0000; }
-  
-      .status-button-ignore.active,
-      .status-button-ignore:hover { background-color:#555; }
-  
-      .status-button-no-suitable-match.active, .status-button-no-suitable-match:hover,
-      .status-button-ambiguous.active, .status-button-ambiguous:hover,
-      .status-button-multiple.active, .status-button-multiple:hover,
-      .status-button-not-identifyable.active, .status-button-not-identifyable:hover { background-color:#ffae00; }
-   
-    } /* #details-content-status */    
-
-  } /* #details-content-placeinfo */
-  
-  .details-content-preview {
-    position:absolute;
-    padding:0 20px 30px 20px;
-    font-size:16px;
-    line-height:140%;
-    box-sizing:border-box;
-    width:500px;
-    bottom:0px;
-    right:10px;
-    
-    em {
-      background-color: #cfcfcf;
-      border-bottom: 1px dotted #444;
-    }
-  
-  } /* .details-content-preview */
-
-} /* #details-content-topsection */
-
-
-#details-content-bottomsection {
+#annotation-details {
   position:absolute;
-  right:0;
-  top:375px;
-  bottom:0;
+  top:0;
   left:0;
-  padding:0 20px;
+  width:100%;
+  height:100%;  
+  z-index:1000;
+}
+
+#clicktrap {
+  background-color:rgba(0,0,0,0.6);
+  width:100%;
+  height:100%;
   box-sizing:border-box;
-  overflow-y:scroll;
+  padding:30px;
+}
+
+#details-popup {
+  position:relative;
+  background-color:#fff;
+  width:100%;
+  height:100%;
+  .box-shadow(0, 0, 5px, 6px, #222);
   
-  div {
-    margin-bottom:10px;
-  }
-  
-  h3 {
-    margin:0;
-    padding:10px 0 2px 0;
-  }
-  
-  table {
-    width:630px;
-  }
-  
-  #details-content-searchresults {
-    position:absolute;
-    top:0;
-    left:20px;
-    width:630px;
-    z-index:10;
-  }
-  
-  #details-content-tags {
+  .header {
     position:relative;
-    padding-left:650px;
-  }
-  
-  #details-content-comment {
-    padding-left:650px;
-    
-    button {
-      margin-top:5px;
-      display:inline-block;
-      vertical-align:top;
-    }
-    
-    textarea {
-      width:410px;
-      height:50px;
-      display:inline-block;
-      background-color:#fff;
-      margin-top:5px;
-      margin-bottom:0px;
-      border-style:dotted;
-      border-color:#bbb;
-      border-width:1px 1px 0px 1px;  
-      resize:vertical;
-      outline:none;
-      vertical-align:top;
-    }
-    
-  } /* #details-content-comment */
-  
-  #details-content-history {
-    padding-left:650px;
-  }
-  
-  .details-content-preview {
+    .gradient(#5a5a5a, #4f4f4f);
+    width:100%;
+    box-sizing:border-box;
+    height:40px;
+    background-color:#494949;
+    border-top:1px solid #686868;
+    border-bottom:1px solid #999;
+    color:#fff;
+    font-size:24px;
+    line-height:22px;
     font-style:italic;
+    padding:8px 15px;
     font-family:"Times New Roman", Times, serif;
+    text-shadow:1px 1px #333;
+    
+    .header-icons {
+      position:absolute;
+      top:8px;
+      right:8px;
+      font-family:"FontAwesome";
+      font-style:normal;
+      font-size:30px;
+      text-shadow:0px 0px #777;
+      color:#ccc;
+            
+      .icon { cursor:pointer; }
+      .icon:hover { color:#fff; }
+      
+    }
+    
+  } /* .header */
+  
+  .body {
+    margin-top:40px;
+    width:100%;
+    position:absolute; 
+    top:0px; 
+    left:0px;
+    right:0px; 
+    bottom:0px;
+    
+    #details-map {
+      height:100%;
+      border-right:1px solid #ccc;
+      
+      #details-search {
+        position:absolute;
+        bottom:20px;
+        left:20px;
+        background-color:rgba(0,0,0,0.6);
+        border:1px solid #000;
+        padding:10px;      
+        z-index:7;
+        color:#000;
+        font-size:16px;
+        
+        input {
+          border:1px solid #000;
+          width:280px;
+          background-color:rgba(255,255,255,0.2);
+          padding:4px 6px;
+          outline:none;
+          font-size:14px;
+          color:#fff;
+        }
+        
+        span {
+          padding:0 5px 0 8px;
+        }
+        
+      } /* #details-search */
+      
+      #results-filter {
+        position:absolute;
+        top:10px; 
+        right:10px;
+        background-color:rgba(0,0,0,0.6);
+        border:1px solid #000;
+        padding:10px;     
+        color:#fff;
+        z-index:7;
+        font-size:14px;
+        color:#fff;
+        
+        ul {
+          list-style-type:none;
+          padding-left:0;
+        }
+        
+        input[type=checkbox] {
+          position:relative;
+          top:2px;
+          outline:none;
+          margin-right:5px;
+        }
+        
+      } /* #results-filter */
+      
+      .gazetteer-id {
+        display:inline-block;
+        margin:3px 0 1px 0;
+        font-size:11px;
+        text-shadow:1px 1px rgba(0, 0, 0, 0.4);
+        padding:5px 4px 5px 2px;
+        letter-spacing:0.5px;
+        .rounded-corners(3);
+        color:#fff;
+        line-height:90%;
+        text-decoration:none;
+        background-color:#999;
+        box-shadow:inset 1px 1px 0 rgba(255, 255, 255, 0.2), inset -1px -1px 0 rgba(0, 0, 0, 0.2);
+      }
+    
+      .gazetteer-id:hover {
+        background-color:#009900;
+        box-shadow:inset 1px 1px 0 rgba(255, 255, 255, 0.2), inset -1px -1px 0 rgba(0, 0, 0, 0.2);
+      }
+      
+    } /* .map */
+    
+    .controls {
+      float:right;
+      width:25%;
+      height:100%;
+      min-width:400px;
+      
+      .statusbar {   
+        box-sizing:border-box;
+        width:100%;
+        padding:10px;
+
+        .status {
+          position:relative;
+          display:inline-block;
+          text-align:center;
+          background-color:#c2c2c2;
+          cursor:pointer;
+          color:#fff;
+          width:34px;
+          height:34px;
+          box-sizing:border-box;
+          font-size:16px;
+          margin:0 5px;
+          padding:8px 4px 0 0;
+        } /* .button */
+  
+        /* Compound icons */
+        .status.no-suitable-match,
+        .status.ambiguous,
+        .status.multiple {
+          padding:5px 6px 4px 0;
+          bottom:3px;
+    
+          .icon:after {
+            position:absolute;
+            font-size:80%;
+            bottom:3px;
+            right:5px;
+          }
+        }
+  
+        .status.no-suitable-match .icon:after {
+          content:'\f05e';
+        }
+      
+        .status.ambiguous .icon:after {
+          content:'\f059';
+        }  
+  
+        .status.multiple .icon:after {
+          content:'2+';
+          font-weight:bold;
+          font-size:70%;
+          bottom:3px;
+          right:3px;
+        }
+  
+        .status.verified.active,
+        .status.verified:hover { background-color:#009900; }
+  
+        .status.not-verified.active,
+        .status.not-verified:hover { background-color:#555; }
+  
+        .status.false-detection.active,
+        .status.false-detection:hover { background-color:#bb0000; }
+  
+        .status.ignore.active,
+        .status.ignore:hover { background-color:#555; }
+  
+        .status.no-suitable-match.active, .status.no-suitable-match:hover,
+        .status.ambiguous.active, .status.ambiguous:hover,
+        .status.multiple.active, .status.multiple:hover,
+        .status.not-identifyable.active, .status.not-identifyable:hover { background-color:#ffae00; }
+   
+      } /* .statusbar */   
+      
+    } /* .controls */
+  
   }
   
 }
-
-
