More work in progress...

--- a/app/assets/stylesheets/categorytag.less
+++ b/app/assets/stylesheets/categorytag.less
@@ -2,13 +2,14 @@
 
 .categorytag {
   position:relative;
-  bottom:1px;
+  bottom:2px;
   font-size:11px;
   text-shadow:1px 1px rgba(0, 0, 0, 0.4);
   display:inline-block;
   padding:5px 2px;
   letter-spacing:0.5px;
-  .rounded-corners(3);
+  margin:0 5px;
+  .rounded-corners(3px);
   width:64px;
   color:#fff;
   text-align:center;
