--- a/app/assets/stylesheets/georesolution/_details.less
+++ b/app/assets/stylesheets/georesolution/_details.less
@@ -1,3 +1,5 @@
+@import "../categorytag.less";
+
 #annotation-details {
   position:absolute;
   top:0;
@@ -51,7 +53,6 @@
             
       .icon { cursor:pointer; }
       .icon:hover { color:#fff; }
-      
     }
     
   } /* .header */
@@ -69,44 +70,64 @@
       height:100%;
       border-right:1px solid #ccc;
       
-      #details-search {
-        position:absolute;
-        bottom:20px;
-        left:20px;
-        background-color:rgba(0,0,0,0.6);
-        border:1px solid #000;
-        padding:10px;      
-        z-index:7;
-        color:#000;
+      .gazetteer-id {
+        display:inline-block;
+        margin:3px 0 1px 0;
+        font-size:11px;
+        text-shadow:1px 1px rgba(0, 0, 0, 0.4);
+        padding:5px 4px 5px 2px;
+        letter-spacing:0.5px;
+        .rounded-corners(3px);
+        color:#fff;
+        line-height:90%;
+        text-decoration:none;
+        background-color:#999;
+        box-shadow:inset 1px 1px 0 rgba(255, 255, 255, 0.2), inset -1px -1px 0 rgba(0, 0, 0, 0.2);
+      }
+    
+      .gazetteer-id:hover {
+        background-color:#009900;
+        box-shadow:inset 1px 1px 0 rgba(255, 255, 255, 0.2), inset -1px -1px 0 rgba(0, 0, 0, 0.2);
+      }
+      
+    } /* #details-map */
+    
+    #details-search {
+      position:absolute;
+      top:15px;
+      right:15px;
+      background-color:#fff;
+      border:1px solid #ccc;
+      z-index:7;
+      color:#ccc;
+
+      #search-input {
         font-size:16px;
-        
+        padding:10px;      
+                
         input {
-          border:1px solid #000;
+          border:1px solid #ccc;
           width:280px;
-          background-color:rgba(255,255,255,0.2);
           padding:4px 6px;
           outline:none;
+          color:#555;
           font-size:14px;
-          color:#fff;
         }
         
-        span {
-          padding:0 5px 0 8px;
+        input:focus {
+          -moz-box-shadow:inset 0px 0px 5px rgba(0,0,0,0.2);
+          -webkit-box-shadow:inset 0px 0px 5px rgba(0,0,0,0.2);
+          box-shadow:inset 0px 0px 5px rgba(0,0,0,0.2);
         }
         
-      } /* #details-search */
+        span { padding:0 5px 0 8px; }
+        
+      } /* .search-input */
       
-      #results-filter {
-        position:absolute;
-        top:10px; 
-        right:10px;
-        background-color:rgba(0,0,0,0.6);
-        border:1px solid #000;
-        padding:10px;     
-        color:#fff;
-        z-index:7;
+      #search-results {
+        padding:5px 12px;    
         font-size:14px;
-        color:#fff;
+        color:#555;
         
         ul {
           list-style-type:none;
@@ -120,46 +141,65 @@
           margin-right:5px;
         }
         
-      } /* #results-filter */
-      
-      .gazetteer-id {
-        display:inline-block;
-        margin:3px 0 1px 0;
-        font-size:11px;
-        text-shadow:1px 1px rgba(0, 0, 0, 0.4);
-        padding:5px 4px 5px 2px;
-        letter-spacing:0.5px;
-        .rounded-corners(3);
-        color:#fff;
-        line-height:90%;
-        text-decoration:none;
-        background-color:#999;
-        box-shadow:inset 1px 1px 0 rgba(255, 255, 255, 0.2), inset -1px -1px 0 rgba(0, 0, 0, 0.2);
-      }
+      } /* #search-results */
     
-      .gazetteer-id:hover {
-        background-color:#009900;
-        box-shadow:inset 1px 1px 0 rgba(255, 255, 255, 0.2), inset -1px -1px 0 rgba(0, 0, 0, 0.2);
-      }
+        
+    } /* #details-search */
       
-    } /* .map */
-    
     .controls {
       float:right;
       width:25%;
       height:100%;
       min-width:400px;
+      font-size:13px;
+      line-height:16px;
+      color:#424242;
+  
+      a { color:#424242; }
+      
+      a:hover { color:#626262; }
+    
+      .mapping-info {
+        background-color:#dfdfdf;
+        padding:10px 15px 10px 50px;
+        margin-top:0px;
+        margin-bottom:0px;
+        position:relative;
+        border-bottom:1px solid #ccc;
+        min-height:30px;
+      }
+
+      .mapping-info.auto:after {
+        content:'\f085';
+        font-family:"FontAwesome";
+        font-size:20px;
+        color:#777;
+        position:absolute;
+        top:14px;
+        left:14px;
+      }
+
+      .mapping-info.corrected:after {
+        content:'\f007';
+        font-family:"FontAwesome";
+        font-size:20px;
+        color:#777;
+        position:absolute;
+        top:10px;
+        left:14px;  
+      }  
       
       .statusbar {   
         box-sizing:border-box;
         width:100%;
-        padding:10px;
+        padding:30px 10px 10px 10px;
+        text-align:center;
 
         .status {
           position:relative;
           display:inline-block;
           text-align:center;
-          background-color:#c2c2c2;
+          background-color:#d5d5d5;
           cursor:pointer;
           color:#fff;
           width:34px;
@@ -167,7 +207,7 @@
           box-sizing:border-box;
           font-size:16px;
           margin:0 5px;
-          padding:8px 4px 0 0;
+          padding:9px 4px 0 0;
         } /* .button */
   
         /* Compound icons */
@@ -216,9 +256,30 @@
         .status.no-suitable-match.active, .status.no-suitable-match:hover,
         .status.ambiguous.active, .status.ambiguous:hover,
         .status.multiple.active, .status.multiple:hover,
-        .status.not-identifyable.active, .status.not-identifyable:hover { background-color:#ffae00; }
+        .status.not-identifiable.active, .status.not-identifiable:hover { background-color:#ffae00; }
    
       } /* .statusbar */   
+      
+      .content-preview {
+        text-align:center;
+        border-bottom:1px solid #ccc;
+        width:100%;
+        box-sizing:border-box;
+        margin:0;
+        padding:20px 15px;
+        font-size:16px;
+        line-height:150%;
+        font-family:"Times New Roman", Times, serif;
+        word-wrap:break-word;
+        font-style:italic;
+    
+        em {
+          background-color: #cfcfcf;
+          padding:0 2px;
+          border-bottom: 1px dotted #444;
+        }
+  
+  } /* .details-content-preview */
       
     } /* .controls */
   
